# GaussianSplatting

./: CMakeLists.txt  CMakeSettings.json  README.md  render-doc-settings.cap
assets/shaders/: gaussian_splatting.wgsl
src/: main.cpp
src/Application/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h
src/Core/: Core.h
src/Utils/: FileReader.cpp  FileReader.h
